--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     // DB & Migration
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
     implementation 'org.flywaydb:flyway-core'
-
+    runtimeOnly("org.flywaydb:flyway-mysql:11.14.1")
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
