--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 
     // Utils
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation "org.apache.commons:commons-text:1.11.0"
     implementation 'com.github.f4b6a3:ulid-creator:5.2.2'   // ULID
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor' // 설정 메타데이터
 
