--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
   app:
-    build: .
+    build: ./backend
     container_name: share-todo-app
     env_file:
-      - .env.prod
+      - ./backend/.env.prod
     depends_on:
       - cloudsql
       - redis
     restart: always
-    ports:
-      - "8080:8080"   # (나중에 nginx 붙이면 외부 노출은 80/443만 남기고 이건 닫는 걸 권장)
+    expose:
+      - "8080"
 
   cloudsql:
     image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.21.0
@@ -23,9 +23,18 @@ services:
   redis:
     image: redis:7
     container_name: share-todo-redis
-    command: ["redis-server", "--appendonly", "yes"]
+    command: [ "redis-server", "--appendonly", "yes" ]
     volumes:
       - redis_data:/data
+    restart: always
+
+  nginx:
+    build: ./frontend
+    container_name: share-todo-nginx
+    depends_on:
+      - app
+    ports:
+      - "80:80"
     restart: always
 
 volumes:
