--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    build: .
+    image: asia-northeast3-docker.pkg.dev/project-61ceee4c-ef41-4d6e-a40/share-todo-back/app:latest
     container_name: share-todo-app
     env_file:
       - ./.env.prod
@@ -29,7 +29,7 @@ services:
     restart: always
 
   nginx:
-    build: ../share-todo-front
+    image: asia-northeast3-docker.pkg.dev/project-61ceee4c-ef41-4d6e-a40/share-todo-front/nginx:latest
     container_name: share-todo-nginx
     depends_on:
       - app
