build: build.gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     // DB & Migration
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly("org.flywaydb:flyway-mysql:11.14.1")
     // JWT
