--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,6 @@ services:
       - "--port=3306"
       - "project-61ceee4c-ef41-4d6e-a40:asia-northeast3:share-todo-database"
     restart: unless-stopped
-    healthcheck:
-      test: [ "CMD-SHELL", "nc -z localhost 3306 || exit 1" ]
-      interval: 5s
-      timeout: 3s
-      retries: 20
 
   redis:
     image: redis:7
@@ -38,21 +33,19 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # nginx 설정을 호스트에서 주입
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # front의 nginx 설정을 그대로 사용
+      - ../share-todo-front/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
 
-      # certbot 인증용 webroot
-      - ./certbot/www:/var/www/certbot
-
-      # 발급된 인증서 저장
-      - ./certbot/conf:/etc/letsencrypt
+      # certbot 데이터는 홈 디렉토리의 ~/certbot을 사용 (절대경로)
+      - /home/osy9907/certbot/www:/var/www/certbot
+      - /home/osy9907/certbot/conf:/etc/letsencrypt
     restart: unless-stopped
 
   certbot:
     image: certbot/certbot
     volumes:
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
+      - /home/osy9907/certbot/www:/var/www/certbot
+      - /home/osy9907/certbot/conf:/etc/letsencrypt
     restart: "no"
 
 volumes:
