--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
       - "--port=3306"
       - "project-61ceee4c-ef41-4d6e-a40:asia-northeast3:share-todo-database"
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "nc -z localhost 3306 || exit 1" ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
 
   redis:
     image: redis:7
@@ -31,22 +36,7 @@ services:
       - app
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      # front의 nginx 설정을 그대로 사용
-      - ../share-todo-front/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-
-      # certbot 데이터는 홈 디렉토리의 ~/certbot을 사용 (절대경로)
-      - /home/osy9907/certbot/www:/var/www/certbot
-      - /home/osy9907/certbot/conf:/etc/letsencrypt
     restart: unless-stopped
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - /home/osy9907/certbot/www:/var/www/certbot
-      - /home/osy9907/certbot/conf:/etc/letsencrypt
-    restart: "no"
 
 volumes:
   redis_data:
