--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,30 @@ services:
       - app
     ports:
       - "80:80"
+      - "443:443"
     restart: unless-stopped
+    volumes:
+      # 호스트에 있는 nginx 설정 파일을 컨테이너에 마운트
+      - /deploy/share-todo-front/default.conf:/etc/nginx/conf.d/default.conf:ro
+
+      # Let's Encrypt 인증서/챌린지용 볼륨
+      - letsencrypt:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+
+  certbot:
+    image: certbot/certbot:latest
+    restart: unless-stopped
+    volumes:
+      - letsencrypt:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    entrypoint: >
+      /bin/sh -c "trap exit TERM;
+      while :; do
+        certbot renew --webroot -w /var/www/certbot --quiet;
+        sleep 12h;
+      done"
 
 volumes:
   redis_data:
+  letsencrypt:
+  certbot_www:
