--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,14 @@ services:
       - "443:443"
     restart: unless-stopped
     volumes:
-      # 호스트에 있는 nginx 설정 파일을 컨테이너에 마운트
-      - /deploy/share-todo-front/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # conf.d 디렉토리 통째로 마운트(운영/부팅 conf 교체가 쉬움)
+      - /deploy/share-todo-front/nginx/conf.d:/etc/nginx/conf.d:ro
 
       # Let's Encrypt 인증서/챌린지용 볼륨
       - letsencrypt:/etc/letsencrypt
       - certbot_www:/var/www/certbot
 
+  # 갱신 전용(12시간마다 renew 시도)
   certbot:
     image: certbot/certbot:latest
     restart: unless-stopped
@@ -58,6 +59,19 @@ services:
         certbot renew --webroot -w /var/www/certbot --quiet;
         sleep 12h;
       done"
+
+  # 초기 발급 전용(필요할 때만 실행)
+  certbot-init:
+    image: certbot/certbot:latest
+    profiles: ["init"]
+    volumes:
+      - letsencrypt:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    command: >
+      certonly --webroot -w /var/www/certbot
+      -d ohsy.kro.kr
+      --agree-tos --no-eff-email
+      -m YOUR_EMAIL_HERE
 
 volumes:
   redis_data:
